# presentation-master-2

./: .gitignore  README.md  analysis_options.yaml  deploy.bash  package-lock.json  pubspec.yaml  run.nu
.VSCodeCounter/2023-04-22_17-06-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-22_17-22-38/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-22_17-23-02/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-22_17-23-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-22_17-23-51/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-05-23_17-54-28/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-04_11-33-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-07_17-49-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  (+3 more)
DESKTOP/: package-lock.json  package.json
DESKTOP/src-tauri/: Cargo.toml  tauri.conf.json
DESKTOP/src-tauri/icons/: icon.icns
LEGACY_DESKTOP/: svelte.config.js  tailwind.config.cjs  vite.config.ts
android/: key.properties  settings.gradle
ios/: Podfile
lib/: README.md  components.dart  control.dart  design.dart  editor.dart  help.dart  home.dart  main.dart  mockups.dart  n.txt  onboarding.dart  presenter.dart  store.dart  test.md  wifi.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
(+149 files in other folders)
