[package]
name = "presentation_master_2"
version = "3.2.3"
description = "Presentation Master 2 for Desktop"
authors = ["Taavi Rübenhagen"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "window-center", "window-create", "window-request-user-attention", "window-set-focus"] }
async-recursion = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.11"
enigo = "0.1.2"
local-ip-address = "0.5.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
