[package]
name = "pm2d"
version = "3.3.3"
description = "Desktop Companion for the Presentation Master 2 presentation remote control"
authors = ["Taavi Rübenhagen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pm2d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3.0"
tiny_http = "0.12.0"
local-ip-address = "0.6.3"
async-recursion = "1.1.1"

